--- a/app/views/hrmsdata/home.html.erb
+++ b/app/views/hrmsdata/home.html.erb
@@ -1,15 +1,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" type="text/css" href="home.css">
 <body>
 <header>
 		<h1>HRMS Homepage</h1>
 </header>
 <div class="w3-container">
-  <div align="right" style="position: absolute;top: 156px;left: 1150px;"><b>Welcome User</b></div>
-  <img src="user.png" style="position: absolute;top: 140px;left: 1280px;" alt="User View" width="65" height="50">
+  <div align="right" style="position: absolute;top: 156px;left: 1050px;"><b>Welcome User</b></div>
   <div class="w3-dropdown-hover">
-    <button class="w3-button w3-black">Menu</button>
+    <button class="w3-button w3-black"style="margin-top: 10px; width: 100px">Menu</button>
     <div class="w3-dropdown-content w3-bar-block w3-border">
       <a href="#" class="w3-bar-item w3-button">Edit Profile</a>
       <a href="#" class="w3-bar-item w3-button">View Timesheet</a>
@@ -20,17 +18,14 @@
        </div>
       </div>
 </div>
-<div class="row">
-  <div class="column" style="background-color:ivory;">
+<div class="row" style = "background-color: ivory; margin-top: 30px; height: 340px; margin-left: 2px; margin-right: 2px;">
+  <div class="column">
     <div id = "action_item"><h5><b>Action Items</b></h5>
     <p>There are no action items to display</p>
     </div>
-    <div id = "tips" ><h5><b>Tips</b></h5>
+    <div id = "tips"><h5><b>Tips</b></h5>
     <p>Login with Firefox for enhanced feature</p>
     </div>
   </div>
-  <div class="column" style="background-color:ivory;">
-  </div>
 </div>
-<footer>Copyright © 2018 Tata Consultancy Services</footer>
 </body>
