--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="footer">
     <small>
-        Copyright © tcs.com
+        Copyright © 2018 Tata Consultancy Services
     </small>
 </footer>
