--- a/app/views/associates/login.html.erb
+++ b/app/views/associates/login.html.erb
@@ -3,7 +3,7 @@
   <div role="form" class="form-horizontal">
     <%= form_for(:session, url: login_path) do |f| %>
       <div class="form-group">
-        <%= f.label :username, class: "col-sm-4 control-label" %>
+        <%= f.label :username, class: "col-sm-4 control-label", id: "username" %>
         <div class = "col-sm-5" >
           <%= f.text_field :username, class: 'form-control' %>
         </div>
@@ -16,8 +16,8 @@
       </div>
         <div class="form-group">
       <div class="col-sm-offset-4 col-sm-4">
-        <%= f.submit "Log in", class: "btn btn-primary" %>
-        <%= f.submit "Reset", class: "btn btn-primary" %>
+        <%= f.submit "Log in", class: "button-primary" %>
+        <%= f.submit "Reset", class: "button-primary" %>
     </div>
   </div>
     <% end %>
