--- a/app/views/hrmsdata/login.html.erb
+++ b/app/views/hrmsdata/login.html.erb
@@ -16,8 +16,8 @@
       </div>
         <div class="form-group">
       <div class="col-sm-offset-4 col-sm-4">
-        <%= f.submit "Log in", class: "btn btn-primary" %>
-        <%= f.submit "Reset", class: "btn btn-primary" %>
+        <%= f.submit "Log in", class: "button-primary" %>
+        <%= f.submit "Reset", class: "button-primary" %>
     </div>
   </div>
     <% end %>
